Added transfer function with unit tests

--- a/ALM.Web/ALM.Web.csproj
+++ b/ALM.Web/ALM.Web.csproj
@@ -8,6 +8,13 @@
     <PackageReference Include="autofixture" Version="4.11.0" />
     <PackageReference Include="autofixture.automoq" Version="4.11.0" />
     <PackageReference Include="autofixture.xunit2" Version="4.11.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
     <PackageReference Include="moq" Version="4.13.1" />
   </ItemGroup>
 
